collated until final chapter

--- a/bindu.tex
+++ b/bindu.tex
@@ -135,218 +135,270 @@ The third chapter contains a comparative analysis of the complex early modern yo
   translation[class="translation"],
   ]
   \begin{edition}
-    \ekddiv{
-  head={[\uproman{42}. \textbf{rājayogāc charīre cihnāni}]},
-  type=section,
-  depth=2, 
-  n=XLII 
-}
-\xmlhead[h42]{[XLII. rājayogāc charīre cihnāni]}
-\phantomsection
- \addcontentsline{toc}{section}{XLII. rājayogāc charīre cihnāni}
- \phantomsection\label{attributesrajabody}
-\begin{prose}[p42_01]
-  \noindent
+    \begin{prose}[p58_05]
+%-----------------------------
+%yasya puruṣasya mano  'khaṇḍe paramapade līnaṃ bhavati/ [p.81]     \E
+%yasya puruṣasya mano  'khaṃḍe       pade līnaṃ bhavati/                 \P
+%yasya puruṣasya manaḥ akhaṃḍe       pade līnaṃ bhavatī/ DSCN7180.JPG   \B
+%yasya puruṣasya manaḥ akhaṃḍe       pade līnaṃ bhavati/                \L
+%yasya puruṣasya mano   khaṃḍe   parapada-līna bhavati/                \N1
+%yasya puruṣasya mano   khaṃḍe   paramada-lita bhavati/                \N2
+%yasya puruṣasya mano   khaṃḍe   parapada-līnaṃ bhavati/                \D
+%yasya puruṣasya mano  'khaṇḍe   parapade līnaṃ bhavati     \U2
+%\om \U1
 %----------------------------
-%idānīṃ rājayogāc charīre    yādṛśāni cihnāni bhavanti   tāni kathyante// \E
-%idānī  rogayogācharīre     etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte   \P
-%idānī  rājayogāc charīre// etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \B 7170.jpg end 7171.jpg beginning
-%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte// \L
-%\om                                                                     \N1
-%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \D
-%idānīṃ rājayogā // charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \K1
-%idānīṃ rājayogāc charīre   etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \J
-%\om                                                                     \N2
-%idānīṃ rājayogācharīre     etādṛśāni cihnāni bhavaṃti   tāni kathyaṃte   \U1
-%idānī  rājayogāśarīre      etādṛśāni cihnāni bhavaṃti// tāni kathyaṃte// \U2
-%-----------------------------
-%Now, such attributes arise in the body from Rājayoga. These are taught [in the following]. 
-%-----------------------------
-\app{\lem[wit={ceteri}]{idānīṃ}
-  \rdg[wit={B,P,U2}]{idānī}}
-\app{\lem[wit={D,J,E,L}, alt={rājayogāc charīre}]{rājayogāc\skp{-}charīre}
-  \rdg[wit={K1}]{rājayogā || charīre}
-  \rdg[wit={B}]{rājayogāc charīre ||}
-  \rdg[wit={U1}]{rājayogācharīre}
-  \rdg[wit={U2}]{rājayogāśarīre}
-  \rdg[wit={P}]{rogayogācharīre}}
-\app{\lem[wit={ceteri}]{etādṛśāni}
-  \rdg[wit={E}]{yādṛśāni}}
-cihnāni bhavanti/ tāni kathyante/
-%-----------------------------
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati/  tad anaṃtaraṃ              jñānam utpadyate// \E [p.55]
-%sakalaroganāśaḥ   sakalāṃ pṛthvīṃ paśyati   tad aṃtaraṃ                jñānam utpadyate   \P
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī/  tad anaṃtaraṃ              jñānam utpadyate// \B
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati/  tad anaṃtaraṃ              jñānam utpadyate// \L
-%\om                                                                                       \N1
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī/  tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate/  \D %%%p. 15 verso
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyatī//  tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate/  \K1
-%sakalarogaḥ//     sakalapṛthvīṃ   paśyati//  tad anaṃtaraṃ tatvaviṣayaṃ// jñānam utpadyate//  \J
-%\om                                                                                       \N2
-%sakalarogaḥ nāśaḥ sakalapṛthvīṃ   paśyati   tad anaṃtaraṃ tatvaviṣayaṃ jñānam utpadyate   \U1
-%sakalaroganāśaḥ   sakalapṛthvīṃ   paśyati// tad anaṃtara---------------jñānam utpadyate// \U2
-%-----------------------------
-%All diseases are destroyed. He sees the entire earth. Then (tad anaṃtaraṃ) knowledge in the realm of reality is generated.   
-%-----------------------------
-\note[type=source, labelb=_116b, labele=_116e, nosep]{cf. YSv (PT, p. 844): yasya darśanamātreṇa rogaśokavivarjitaḥ | paramānandacittaḥ syāt tapasvī caiva kīrttitaḥ | saptadvīpā bhaved dṛṣṭā tattvajñānaṃ tato bhavet | sarvabhāvaṃ vijānīyād vajradeho bhavet tathā | sarpadaṣṭe viṣaṃ na syāt kṣudhā nidrā tṛṣā tathā |}
-\app{\lem[wit={ceteri}]{sakalaroganāśaḥ}\linelabel{_116b}
-  \rdg[wit={U1}]{sakalarogaḥ nāśaḥ}
-  \rdg[wit={J}]{sakalarogaḥ ||}}/
-\app{\lem[wit={ceteri}, alt={sakalapṛthvīṃ}]{sakalapṛthvīṃ}
-  \rdg[wit={P}]{sakalāṃ pṛthvīṃ}}
-\app{\lem[wit={ceteri}]{paśyati}
-  \rdg[wit={B,D,K1,L}]{paśyatī}}/
-\app{\lem[wit={ceteri}]{tad\skp{-}anantaraṃ}
-  \rdg[wit={P}]{tad aṃtaraṃ}
-  \rdg[wit={U2}]{tad anaṃtara°}}
-\app{\lem[wit={D,J,K1,U1}]{tattvaviṣayaṃ}
-  \rdg[wit={ceteri}]{\om}}
-jñānam-utpadyate/
-%-----------------------------
-%samagrā  bhāṣā  jānāti/  tataḥ puruṣasya deho vajramayo bhavati/  sarpadaṃśena    maraṇaṃ na bhavati/   \E
-%samagrāṃ bhāṣāṃ jānāti   tataḥ puruṣasya deho vajramayo bhavati   sarpadaṃśo      maraṇaṃ na bhavati    \P
-%samagrā  bhāṣa  jānāti   tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśema    maraṇaṃ na bhavatī/   \B
-%samagra  bhāṣā    jānāti tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśe      maraṇaṃ    bhavati//  \L
-%\om                                                                                                     \N1
-%samagrāṃ bhāṣāṃ jānāti/  tataḥ puruṣasya deho vajramayo bhavati/  sarpadaṃśe satī maraṇaṃ na bhavati/   \D
-%samagrāṃ bhāṣāṃ jānāti//  tataḥ puruṣasya deho vajramayo bhavati//  sarpadaṃśe sati maraṇaṃ na bhavati//   \K1
-%samagrāṃ bhāṣāṃ jānāti//  tataḥ puruṣasya deho vajramayo bhavati//  sarpadaṃśe sati maraṇaṃ na bhavati//   \J
-%\om                                                                                                     \N2
-%samagrāṃ bhāṣāṃ jānāti   tataḥ puruṣasya deho vajramayo bhavati   sarpadaṃśe satī maraṇaṃ na bhavati    \U1
-%samagrā bhāṣā   jānāti// tataḥ puruṣasya deho vajramayo bhavati// sarpadaṃśe      maraṇaṃ na vati//     \U2
-%-----------------------------
-%He realizes the totality of language. Because of that [Rājayoga?] the body of the human becomes indestructable. Death through a snake-bite does not arise. 
-%-----------------------------
-\app{\lem[wit={ceteri}]{samagrāṃ bhāṣāṃ}
-  \rdg[wit={E,U2}]{samagrā bhāṣā}
-  \rdg[wit={B}]{samagrā bhāṣa}
-  \rdg[wit={L}]{samagra bhāṣā}}
-jānāti/
-tataḥ puruṣasya deho vajramayo bhavati/ 
-sarpa\app{\lem[wit={ceteri}, alt={°daṃśe}]{daṃśe}
-  \rdg[wit={P}]{°daṃśo}
-  \rdg[wit={E}]{°daṃśena}
-  \rdg[wit={B}]{°daṃśema}}
-\app{\lem[wit={J,K1}]{sati}
-  \rdg[wit={D,U1}]{satī}
-  \rdg[wit={ceteri}]{\om}}
-maraṇaṃ
-\app{\lem[wit={ceteri}]{na}
-  \rdg[wit={L}]{\om}}
+%The mind of the person becomes absorbed into the indivisible supreme place.  
+%-----------------------------34
+yasya puruṣasya
+\app{\lem[wit={ceteri}]{mano}
+  \rdg[wit={B,L}]{manaḥ}
+}\app{\lem[wit={ceteri}]{'khaṇḍe}
+  \rdg[wit={B,L}]{akhaṃḍe}}
+\app{\lem[wit={E}]{paramapade}
+  \rdg[wit={D,N1}]{parapada°}
+  \rdg[wit={N2}]{paramada°}
+  \rdg[wit={U2}]{parapade}}
+\app{\lem[wit={ceteri}]{līnaṃ}
+  \rdg[wit={N1}]{°līna}
+  \rdg[wit={N2}]{°lita}}
 \app{\lem[wit={ceteri}]{bhavati}
-  \rdg[wit={B}]{bhavatī}
-  \rdg[wit={U2}]{vati}}/
+  \rdg[wit={B}]{bhavatī}}/
 %-----------------------------
-%tataḥ puruṣasya bubhukṣā--pipāsā--nidrollatā------śītoṣṇatā bādhāṃ na kurvanti/ \E
-%tataḥ puruṣasya bunnukṣā--pipāsā--nidrolmatā------śītatā----bādhā na kurvaṃti \P
-%tatpuruṣasya    babhukṣā--pipāsā--nidrollatā------śīta------bādhā na kurvanti/ \B
-%tatpuruṣasya    babhukṣā--pipāsā--nidroṣṇatā------śīta------bādhā na kurvanti... \L
-%\om                                                                 \N1
-%tataḥ puruṣasya bubhukṣā--pipāsā--nidrā/ uṣṇatā// śīta nā   bādhāṃ na kuroti???/ \D
-%tataḥ puruṣasya bubhukṣā // pipāsānidrā// uṣṇatā// śīta nā   bādhāṃ na karoti// \K1
-%\om \J
-%\om                                                                 \N2
-% \om                                                         \U1
-%tataḥ puruṣasya bubhukṣā--pipāsā--nidroṣṭṇatā-----śīta------bādhāṃ na kurvaṃti// \U2
+%yaḥ puruṣaḥ svakulaṃ     trividhāt   tāpān nivartya  parame  muktipade  rakṣati/ \E
+%yaḥ puruṣaḥ svīyaṃ kulaṃ trividhāt   tapān nivartta--parama--muktipade  rakṣati \P %%%7579.jpg
+%yaḥ puruṣaḥ svikulaṃ     trividhaṃ/  tāpān nivartya  para----muktipade  rakṣati/ \B
+%yaḥ puruṣaḥ sviyaṃ kulaṃ trividhat   āpān nivartya   para----muktipade  rakṣati... \L
+%yaḥ puruṣaḥ svīyaṃ kūlaṃ trividhāt   tāpān nivarttya parama--muktipade  rakṣati/ \N1
+%yaḥ puruṣa  svīyaṃ kūlaṃ trividhāt   tāpān nivartya  paramamamuktipade  rakṣati/ \N2
+%yaḥ puruṣaḥ svīyaṃ kūlaṃ trividhāt---tāpān mivarttya parama--muktipade  rakṣati/ \D
+%yaḥ puruṣa  svīyaṃ kulaṃ trividhat---āpān nivartya   parama--muktipakṣe rakṣati// \U2
+%\om \U1
 %-----------------------------
-%Then the afflictions of hunger, thirst, sleepiness, and heat do not arise for the person. 
+%The person situated in the place of supreme liberation who turned away from the threefold misery (adhyātmika, adhibhautika, adhidaivika) protects the own kula (lineage? noble family? tribe?). 
+%-----------------------------35
+yaḥ \app{\lem[wit={ceteri}]{puruṣaḥ}
+  \rdg[wit={N2,U2}]{puruṣa}}
+\app{\lem[wit={ceteri}]{svīyaṃ kūlaṃ}
+  \rdg[wit={B}]{svikulaṃ}
+  \rdg[wit={E}]{svakulaṃ}}
+\app{\lem[wit={D,E,P,N1,N2},alt={trividhā}]{trividhā}
+  \rdg[wit={L,U2}]{trividhat}
+  \rdg[wit={B}]{trividhaṃ |}
+}\app{\lem[wit={ceteri},alt={tāpān}]{tāpā\skp{n-ni}}
+  \rdg[wit={L,U2}]{āpān}}\skm{n-ni}vartya
+\app{\lem[wit={P,D,N1}]{paramamuktipade}
+  \rdg[wit={E}]{parame muktipade}
+  \rdg[wit={N2}]{paramamamuktipade}
+  \rdg[wit={B,L}]{paramuktipade}
+  \rdg[wit={U2}]{paramamuktipakṣe}} rakṣati/
 %-----------------------------
-\app{\lem[wit={ceteri}]{tataḥ}
-  \rdg[wit={B,L}]{tat°}
-  \rdg[wit={J,U1}]{\om}}
-\app{\lem[wit={ceteri}]{puruṣasya}
-  \rdg[wit={J,U1}]{\om}}
-\app{\lem[wit={D,E,K1,U2}]{bubhukṣā}
-  \rdg[wit={P}]{bunnukṣā}
-  \rdg[wit={B,L}]{babhukṣā}
-  \rdg[wit={J,U1}]{\om}
-}\app{\lem[wit={L},alt={pipāsānidroṣṇatā°}]{pipāsānidroṣṇatā}
-  \rdg[wit={U2}]{pipāsānidroṣṭṇatā°}
-  \rdg[wit={D,K1}]{pipāsānidrā | uṣṇatā ||}
-  \rdg[wit={E,B}]{pipāsānidrollatā}
-  \rdg[wit={P}]{pipāsānidrolmatā}
-  \rdg[wit={J,U1}]{\om}
-}\app{\lem[wit={ceteri},alt={°śīta°}]{śīta}
-  \rdg[wit={P}]{śītatā}
-  \rdg[wit={E}]{śītoṣṇatā}
-  \rdg[wit={D,K1}]{śīta nā}
-  \rdg[wit={J,U1}]{\om}}bādhāṃ na
-\app{\lem[wit={ceteri}]{kurvanti}
-   \rdg[wit={K1}]{karoti}
-   \rdg[wit={D}]{kuroti}
-    \rdg[wit={J,U1}]{\om}}/\linelabel{_116e}
+%etādṛśasya puruṣasya śravaṇād   darśanāt  samagravighnā naśyanti/    \E
+%etādṛśā    puruṣasya śravaṇā    darśanāt  samagravighnā naśyaṃti     \P
+%etādṛśā    puruṣasya śravaṇāt   darśanāt/ samagravighnā na naśyaṃtī/ \B
+%etādṛśā    puruṣasya śravaṇāt   darśanāt  samagravighnā na naśyaṃti... \L
+%etādṛśa/   puruṣaṃ   śravaṇād   darśanāt  samagravighnā naśyaṃti/ \N1
+%etādṛśaṃ   puruṣaṃ   śravaṇād   darśanāt  samagravighnā naśyaṃti/ \N2
+%etādṛśa----puruṣaṃ   śravaṇād   darśanāt  samagravighnā naśyaṃti/ \D
+%etādṛśaṃ   puruṣaṃ   śravaṇād   darśanāt  samagraviśvaś ca vaśāṃ? bhavati \U1
+%etādṛśa    puruṣasya śravaṇāt// darśanāt  samagravighna naśyaṃti//    \U2
 %-----------------------------
-%vāksiddhir bhavati/  vidyatpāte           kācid bādhāpi na bhavati// \E
-%vāksiddhir bhavati                                        \P
-%vāksiddhir bhavatī/  vidyutpāte           kācid glānir na bhavati// \B
-%vāksiddhir bhavati/  vidyutpāte           kācid glānir na bhavati// \L
-%\om                                                                 \N1
-%vāksiddhir bhavati/  vidyutpāte śarīre    na kiṃcid glānir bhavati/ \D
-%\om                                                                 \N2
-%                     vidyutpāte śarīre    kvācid glānir na bhavati  \U1
-%vāksiddhir bhavati// vidyutpāte           kācidd hānir na bhavati// \U2
+%From hearing [or] from seeing about such a person all obstacles are destroyed. 
+%-----------------------------36
+\note[type=philcomm, labelb=417, lem={etādṛśaṃ \ldots naśyanti}]{Textual evidence of \getsiglum{U1} resumes from this sentence onwards.}
+\app{\lem[wit={ceteri}]{etādṛśaṃ}
+  \rdg[wit={D,U2}]{etādṛśa}
+  \rdg[wit={N1}]{etādṛśa |}
+  \rdg[wit={B,L,P}]{etādṛśā}
+  \rdg[wit={E}]{etādṛśasya}}
+\app{\lem[wit={X}]{puruṣaṃ}
+  \rdg[wit={Y}]{puruṣasya}}
+\app{\lem[wit={ceteri},alt={śravaṇād}]{śravaṇā\skp{d-da}}
+  \rdg[wit={B,L}]{śravaṇāt}
+  \rdg[wit={U2}]{śravaṇāt ||}
+  \rdg[wit={P}]{śravaṇā}
+}\app{\lem[wit={ceteri},alt={darśanāt}]{\skm{d-da}rśanā\skp{t-sa}}
+  \rdg[wit={B}]{darśanāt |}
+}\skm{t-sa}magra\app{\lem[wit={ceteri}]{vighnā}
+\rdg[wit={U1}]{viśvaś ca vaśāṃ}}
+\app{\lem[wit={ceteri}]{naśyanti}
+  \rdg[wit={L}]{na naśyaṃti}
+  \rdg[wit={B}]{na naśyaṃtī}
+  \rdg[wit={U1}]{bhavati}}/ 
 %-----------------------------
-%Perfection of speech arises. Within the moment of a thunderstroke any kind of fatigue does not arise in the body.  
+%dine dine kalyāṇaṃ  bhavati/ niṣkalaṃkā buddhir utpadyate/    \E
+%dine dine kalyāṇaṃ  bhavati  niṣkalaṃkā buddhir utpadyate     \P
+%dine dine kalyāṇaṃ  bhavati  niṣkalaṃkā buddhir utpadyate/    \B
+%dine dine kalyāṇaṃ  bhavati  niṣkalaṃkā buddhir utpadyate...  \L
+%dine dine kalyāṇaṃ  bhavati/ niṣkalaṃ   buddhir utpadyate//     \N1
+%dine dine kalyāṇaṃ  bhavati/ niṣkalaṃ   buddhir utpadyate//     \N2
+%dine dine kalyāṇaṃ  bhavati/ niṣkalaṃkā buddhir utpadyate/    \D
+%dine      kalyāṇāṃ  bhavatīr niṣkalaṃkā buddhir utpadyate     \U1
+%dine dine kalyāṇaṃ  bhavati/ niṣkalaṃko buddhir utpadyate// \U2
 %-----------------------------
-\note[type=source, labelb=_308, labele=_308e, nosep]{cf. YSv (PT, p. 844): uṣṇatā śītatā ceti vāksiddhiḥ syān na saṃśayaḥ | vidyutpāte 'pi dehasya kvacid hānir na jāyate |}
-vāksiddhir-bhavati/ vidyutpāte
-    \app{\lem[wit={D,U1}]{śarīre}\linelabel{_308}
-      \rdg[wit={ceteri}]{\om}}
-    \app{\lem[wit={U2}, alt={kācid hānir na}]{kācid hānir-na}
-      \rdg[wit={B,L}]{kācid glānir na}
-      \rdg[wit={D}]{na kiṃcid glānir}
-      \rdg[wit={U1}]{kvācid glānir na}
-      \rdg[wit={E}]{kācid bādhāpi}}
-    bhavati/\linelabel{_308e}
+%Day by day prosperity arises. A flawless intellect arises. 
+%-----------------------------37-38
+\app{\lem[wit={ceteri}]{dine dine}
+  \rdg[wit={U1}]{dine}}
+\app{\lem[wit={ceteri}]{kalyāṇaṃ}
+  \rdg[wit={U1}]{kalyāṇāṃ}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={U1}]{bhavatīr}}/
+\app{\lem[wit={ceteri}]{niṣkalaṅkā}
+  \rdg[wit={N1,N2}]{niṣkalaṃ}
+  \rdg[wit={U2}]{niṣkalaṃko}}
+buddhir-utpadyate\dd{}\end{prose}
+               \ekddiv{
+                 head={[\uproman{59}. \textbf{yogaśāstrarahasyam}]},
+                 type=section,
+                 depth=2, 
+                 n=LIX
+               }\xmlhead[h59]{[LIX. yogaśāstrarahasyam]}
+               \phantomsection
+               \addcontentsline{toc}{section}{LIX. yogaśāstrarahasyam}
+\begin{prose}[p59_01]
+  \noindent
+\note[type=source, labelb=_gollum419b, labele=_frodo419e, nosep]{cf. YSv (PT, p. 847): idaṃ yogarahasyañ ca na vācyaṃ mūrkhasannidhau || yogadeśas tu tatraiva || utpātarahite deśe kaṇṭakādivivarjite | abhyasyate sadā yogaḥ samaḥ syāt sukhaduḥkhayoḥ | surājani samāśritya karttavyo nirupadrave | deśe tu sarvaśasyāḍhye lobhamohavivarjite |}
 %-----------------------------
-%tadanaṃtaraṃ  pavanarūṣī puruṣī bhavati/  samagrāṃ pṛthvīṃ dṛṣṭyā paśyati/   aṇimādyaṣṭasiddhir bhavati/ \E
-%tadanaṃtaraṃ  pavanarūpī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭyā paśyati    aṇimādyaṣṭasiddhir bhavati  \P
-%tadanaṃtara   pavanarūpi puruṣo bhavati// samagrāṃ pṛthvī  dṛṣṭā paśyati/    aṇimādyāṣṭasiddhir bhavati/ \B scribe switches so much between i and ī
-%tadanaṃtaraṃ  pavanarūpi puruṣo bhavati// samagrāṃ pṛthvīṃ dṛṣṭā paśyati//   aṇimādyāṣṭasiddhir bhavati// \L
-%\om                                                                 \N1
-%tadanaṃtaraṃ  pavanayopī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭyā paśyati/   aṇimādyaṣṭasiddhir bhavati//  \D
-%\om                                                                 \N2
-%tadanaṃtaraṃ  pavanayogī puruṣo bhavati   samagrāṃ pṛthvīṃ dṛṣṭvā paśyati    aṇimādyāṣṭasiddhir bhavati  \U1 %%%291.jpg
-%tadanaṃtaraṃ  pavanarūpī puruṣo bhavati// samagrāṃ pṛthvīṃ dṛṣṭvā paśyati//  aṇimāmahimāgarimāladhimā tathā prātikāmyamīśatvaṃ// viśītvaṃ// ity āṣṭasiddhayaḥ////  \U2
+%idaṃ yogaśāstrasya rahasyaṃ samastaśāstraprame            yasya manaḥ   yathāṃdhakārasya    madhye dīpa----tejaḥ praviśati/        \E
+%idaṃ yogaśāstrasya rahasyaṃ samagraśāstramadhye           yasya manaḥ   yathāṃdhakārasya    madhye dīpasya tejaḥ praviśati   \P
+%idaṃ yogaśāstrarahasyaṃ/    samastaśāstramadhye     manaḥ yasya mana    yathāṃdhakārasya    madhye dīpasya tejaḥ praviśyati... \B
+%idaṃ yogaśāstrarahasyaṃ//   samastaśāstramadhye     mano  yasya mana    yathāṃdhakārasya    madhye dīpasya tejaḥ praviśyati...  \L
+%idaṃ yogaśāstrarahasyaṃ/    samagraśāstramadhye           yasya mana/   yathāṃdhakāras      madhye dīpasya tejaḥ praviśati/     \N1
+%idaṃ yogaśāstrarahasya      samagraśāstramadhye                                                                               \N2
+%idaṃ yogaśāstrarahasya/     samagraśāstramadhye           yasya mana/   yathāṃdhakāramadhye        dīpasya tejaḥ praviśati/     \D
+%idaṃ yogaśāstreṣu rahasyaṃ  samagraśāstramadhye           yasya manaḥ   yathāṃdhakārasya    madhye dīpasya tejaḥ praviśyati...  \U1
+%idaṃ yogaśāstrarahasyaṃ     samagraśāstramadhye           yasya manaḥ// yathāṃdhakārasya    madhye dīpasya tejaḥ vipraśati//        \U2
 %-----------------------------
-%Subsequently, the person becomes like the wind. He sees the entire earth with a glance. The eight supernatural powers arise.  
+%This is the secret of the scriptures of Yoga within all scriptures of yoga. Just as he whose mind is like the light of a lamp that enters into the midst of darkness, ...  
+%-----------------------------1-2
+idaṃ\linelabel{_gollum419b}
+\app{\lem[wit={B,L,N1,U2}]{yogaśāstrarahasyaṃ}
+        \rdg[wit={D,N2}]{yogaśāstrarahasya}
+        \rdg[wit={U1}]{yogaśāstreṣu rahasyaṃ}
+        \rdg[wit={E,P}]{yogaśāstrasya rahasyaṃ}}
+      samagraśāstramadhye/\linelabel{_418e}
+      \app{\lem[wit={ceteri}]{yasya}
+        \rdg[wit={U2}]{\om}} 
+\app{\lem[type=emendation, resp=egoscr]{mano}
+  \rdg[wit={E,P,U1,U2}]{manaḥ}
+  \rdg[wit={ceteri}]{mana}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[wit={ceteri}]{yathāndhakārasya}
+  \rdg[wit={N1}]{yathāṃdhakāras}
+  \rdg[wit={D}]{yathāṃdhakāra°}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[wit={ceteri}]{madhye}
+  \rdg[wit={N2}]{\om}} 
+\app{\lem[wit={ceteri}]{dīpasya}
+  \rdg[wit={E}]{dīpa°}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[wit={ceteri}]{tejaḥ}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[wit={D,E,P,N1}]{praviśati}
+  \rdg[wit={B,L,U1}]{praviśyati}
+  \rdg[wit={U2}]{vipraśati}
+  \rdg[wit={N2}]{\om}}/ 
 %-----------------------------
-\note[type=source, labelb=_309, labele=_309e, nosep]{cf. YS (PT, p. 844): tato 'sau vāyuyogī syād dṛṣṭvā pṛthvīkulānvitaḥ | aṇimādyaṣṭasiddhiḥ syān mahāpadmodayas tathā | āgacchanti samīpe ca nidhayo nātra saṃśayaḥ |}
-tadanantaraṃ
-pavana\app{\lem[wit={U1}, alt={°yogī}]{yogī}\linelabel{_309}
-      \rdg[wit={P,U2}]{°rūpī}
-      \rdg[wit={B,L}]{°rūpi}
-      \rdg[wit={D}]{°yopī}
-      \rdg[wit={E}]{°rūṣī}}
-    \app{\lem[wit={ceteri}]{puruṣo}
-      \rdg[wit={E}]{puruṣī}} bhavati/
-    samagrāṃ
-    \app{\lem[wit={ceteri}]{pṛthvīṃ}
-      \rdg[wit={B}]{pṛthvī}}
-    \app{\lem[wit={D,E,P}]{dṛṣṭyā}
-      \rdg[wit={B,L}]{dṛṣṭā}
-      \rdg[wit={U1,U2}]{dṛṣṭvā}} paśyati/
-    \app{\lem[wit={ceteri},alt={aṇimādyaṣṭasiddhir}]{aṇimādyaṣṭasiddhi\skp{r-bha}}
-      \rdg[wit={U2}]{aṇimāmahimāgarimāladhimā tathā}
-    }\app{\lem[wit={ceteri},alt={bhavati}]{\skm{r-bha}vati}
-      \rdg[wit={U2}]{ prātikāmyamīśatvaṃ || viśītvaṃ || ity āṣṭasiddhayaḥ ||}}/ \linelabel{_309e}
-  \end{prose}
+%tathā śāstramadhye mano praviśati/     \E
+%tathā śāstramadhye manaḥ praviśati     \P
+%tathā.... \om                          \B
+%tathā.... \om                          \L
+%tathā śāstramadhye tasya manaḥ praviśati/     \N1
+%                   tasya manaḥ praviśati/     \N2
+%tathā śāstramadhye tasya manaḥ praviśati/     \D
+%tathā.... \om                          \U1
+%yathā śāstramadhye mano praviśati//     \U2
+%-----------------------------
+%similarly his mind enters into the teaching. %%%%1+2=He whose mind enters into the scriptures as the light of a lamp enters into darkness.
+%-----------------------------
+\app{\lem[wit={ceteri}]{tathā}
+  \rdg[wit={U2}]{yathā}
+  \rdg[wit={N2}]{\om}}
+\app{\lem[wit={ceteri}]{śāstramadhye}
+  \rdg[wit={B,L,N2,U1}]{\om}}
+\app{\lem[wit={D,N1,N2}]{tasya manaḥ}
+  \rdg[wit={P}]{manaḥ}
+  \rdg[wit={E,U2}]{mano}
+  \rdg[wit={B,L,U1}]{\om}}
+\app{\lem[wit={ceteri}]{praviśati}
+  \rdg[wit={B,L,U1}]{\om}}/
+%-----------------------------
+%yasya rājño madhye        kalaho nāsti/ \E
+%yasya rājño manomadhye    kapaṭaṃ nāsti \P
+%yasya rājño madhye manasi kapaṭaṃ nāsti/ \B
+%yasya rājño madhye manasi kapaṭaṃ nāsti... \L
+%yasya rājño manomadhye    kapaṭaṃ nāsti/ \N1
+%yasya rājño manomadhye    kapaṭaṃ nāsti  \N2
+%yasya rājño manomadhye    kapaṭaṃ nāsti/ \D
+%      rājño manomadhye    kapaṭaṃ nāsti \U1
+%yasya rājño manomadhye    kapaṭaṃ nāsti// \U2
+%-----------------------------
+%Deceit does not exists in the mind of such a king.
+%Of whose king there is no deceit in the midst of the mind,
+%-----------------------------4
+\app{\lem[wit={ceteri}]{yasya}
+  \rdg[wit={U1}]{\om}}
+rājño
+\app{\lem[wit={ceteri}]{manomadhye}
+  \rdg[wit={B,L}]{madhye manasi}
+  \rdg[wit={E}]{madhye}}
+\app{\lem[wit={ceteri}]{kapaṭaṃ}
+  \rdg[wit={E}]{kalaho}} nāsti/
+%-----------------------------
+%yasmin dṛṣṭe deśikatrāso na bhavati/ \E
+%yasmin dṛṣṭe deśikasya trāso na bhavati  \P
+%yasmiṃ dṛṣṭe deśikasya trāso na bhavati/ \B
+%yasmiṃ dṛṣṭe deśikasya trāso na bhavati \L
+%yasmiṃ dṛṣṭe deśakasya trāso na bhavati/  \N1
+%yasmin dṛṣṭe deśakasya trāso na bhavati/  \N2
+%yasmiṃ dṛṣṭe deśakasya trāso na bhavati/  \D
+%yasmiṃ dṛṣṭe darśakasya trāso na bhavati \U1
+%yasmin dṛṣṭe deśikasya trāso na bhavati//  \U2
+%-----------------------------
+\app{\lem[wit={ceteri},alt={yasmin}]{yasmi\skp{n-dṛ}}
+  \rdg[wit={B,L,N1,D,U1}]{yasmiṃ}
+}\skm{n-dṛ}ṣṭe
+\app{\lem[wit={ceteri}]{deśakasya}
+  \rdg[wit={U1}]{darśakasya}
+  \rdg[wit={E}]{deśika°}}
+trāso na bhavati/
+%-----------------------------
+%tasya manaḥ śuddhaṃ bhavati/  \E
+%tasya manaḥ śuddhaṃ bhavati   \P
+%tasya manaḥ śuddhaṃ bhavati/  \B
+%tasya manaḥ śuddhaṃ bhavati   \L
+%tasya manaḥ śuddhaṃ bhavati/  \N1
+%tasya manaḥ śuddhaṃ bhavati/  \N2
+%tasya manaḥ śuddhaṃ bhavati/  \D
+%yasya manaḥ śuddhaṃ bhavati   \U1
+%tasya manaḥ śuddhaṃ bhavati//  \U2
+%-----------------------------
+%his mind becomes pure.   
+%-----------------------------6
+\app{\lem[wit={ceteri}]{tasya}
+  \rdg[wit={U1}]{yasya}} 
+manaḥ śuddhaṃ bhavati/
+\end{prose}
   \end{edition}
   \begin{translation}
-    \ekddiv{
-  head={[\uproman{42}. \textbf{Signs in the body as a result of Rājayoga}]},
-  type=section,
-  depth=2, 
-  n=XLII.1 
-}
-\xmlhead[h42]{[XLII. Signs in the body as a result of Rājayoga]}
-%\vspace{-3mm}
-\begin{tlate}[p42_01]
-\noindent Now, signs like this manifest in the body as a result of Rājayoga.\footnote{The repeated mention of the effects of Rājayoga seems redundant since the topic has been covered extensively already in section \uproman{16}-\uproman{17}. Nevertheless, these specific results have not been mentioned so far. In the descriptions of previous chapters, the unhinderedness, equanimity and bliss resulting from Rājayoga were emphasized. Here, the focus shifts to physical results such as health, strength, supernatural abilities or resilience.} They are described. The eradication of all diseases occurs. He sees the entire world. Subsequently, knowledge whose range is the principles arises. He understands all languages. Then, the person's body becomes as hard as a diamond. After a snake bite has taken place, death does not occur. Then, the troubles of hunger, thirst, sleep, heat and cold do not oppress for the person. Perfection of speech arises. When struck by lightning, there is no damage whatsoever to the body. Subsequently, the person becomes a yogin of the wind.\footnote{Rāmacandra employs \textit{pavanayogī} as a synonym for \textit{vāyuyogī} of his source text \emph{Yogasvarodaya}. The following sentences suggest that the \textit{pavanayogī} is so-called because the yogin can move freely through space, like the wind. That reminds us of \emph{Amanaska} 1.65: \textit{dvādaśāhalayenāpi bhūcaratvaṃ hi sidhyati} | \textit{nimiṣārdhapramāṇena paryaṭaty eva bhūtalam} || 65 || Birch (213: 243) translates: ``By means of absorption for a period of twelve days, the state of moving across the earth is achieved. Within half the time [it takes to] blink an eyelid, [the yogin can] travel [anywhere] around the world.'' An e-text search for \textit{pavanayogī} yielded no hits, in contrast to \textit{vāyuyogī}. However, the term seems to be mostly associated with \textit{prāṇāyāma} in other texts, as in the case of \emph{Rudrayāmalatantra} 61.177: \textit{pavaneśaś cānilasthā paramātmā nirantaraḥ} (em.] \textit{nināntarā}) \textit{vāyupūrakakārī ca vāyukumbhakavadhinī} || 175 || \textit{vāyucchidrakaro vātā vāyunirgamamudrikā} | \textit{kumbhakastho recakasthā pūrakasthātipūriṇī} || 176 || \textit{vāyvākāśādhārarūpī vāyusañcārakāriṇī} | \textit{vāyusiddhikaro dātrī vāyuyogī ca vāyugā} || 177 || `` (175) The lord of the breath, residing in breath is the supreme self, not interrupted anywhere. She is one who performs the inhalation of the breath and the one who executes the retention of the breath. (176) He is one who pierces with the breath, he is the blower; she is the one who seals the outflow of the breath. He abides in retention, she abides in exhalation, in inhalation, and in intensified inhalation. (177) She is the one who has the form of a support of space and breath, the one who sets the breath in motion. He is the one who accomplishes the breath, the giver and the yogin of the wind; and she the one who moves the wind.''} He sees the entire earth with [his] gaze. The eight supernatural powers beginning with ``becoming infinitely small'' etc. (\textit{aṇimādi}) arise.
-    \end{tlate}
+    \begin{tlate}[p58_04]
+ That person’s mind that has dissolved into the undivided supreme state and who has turned his lineage away from the threefold miseries\footnote{The threefold misery consists of: 1. \textit{adhyātmika} (``internal''), which refers to any physical and mental misery caused by diseases; 2. \textit{adhibhautika} (``external''), which refers to any misery caused by external living beings or objects; and 3. \textit{adhidaivika}, which refers to any misery caused by the gods or comes from heaven, such as cold, heat, storm, drought, etc. For a more detailed account, cf. \citetitle{mainkar2004} (2004), especially the respective explanations provided in the \textit{bhāṣya} of Gaudapāda for the first \textit{kārikā}.} and protects [them] in the state of supreme liberation, all obstacles disappear because of listening to and seeing that person. Day by day, prosperity arises. A flawless intellect arises.%\footnote{In Sanskrit literature, it is usually the king who protects the own lineage, cf. \citetitle{ramayana} 3.36.26; \citetitle{mahabharata} 7.11.10.}
+\end{tlate}
+               \ekddiv{
+                 head={[\uproman{59}. \textbf{Secret teaching of the scriptures of yoga}]},
+                 type=section,
+                 depth=2, 
+                 n=LIX.1
+               }
+               \xmlhead[h59]{[LVIX. Secret teaching of the scriptures of yoga]}
+\begin{tlate}[p59_01]
+  \noindent
+  This is the secret teaching of the scriptures of yoga in all of the scriptures. [The king] whose mind enters into the teaching just as the light of a lamp enters into the midst of darkness; the king in whose mind there is no deceit and, when he is seen [by his subjects] there is no fear of a ruler has a purified mind. 
+  \flushpage
+\end{tlate}
   \end{translation}
 \end{alignment}
-\pagebreak %after pp. 131-132
+\pagebreak %after pp. 183-184
 \cleardoublepage
 \selectlanguage{english}
 \chapter{Appendix}
